# dbt-template

./: dbt_project.yml  pyproject.toml
models/example/: my_first_dbt_model.sql  my_second_dbt_model.sql  schema.yml
